[project]
name = "Klog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "JostTim",email = "44769559+JostTim@users.noreply.github.com"},
]
dependencies = [
    "mkdocs-material>=9.5.31",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
